[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Glyphs/NC Front Glyph.png" type="Texture" id=1]
[ext_resource path="res://Rooms/Real North Chamber.gd" type="Script" id=2]
[ext_resource path="res://Assets/Glyphs/NC Bottom Right Glyph.png" type="Texture" id=3]
[ext_resource path="res://Assets/Glyphs/NC L Glyph.png" type="Texture" id=4]
[ext_resource path="res://Assets/Glyphs/NC Right Glyph.png" type="Texture" id=5]
[ext_resource path="res://Assets/Glyphs/NC Left Sprite.png" type="Texture" id=6]
[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_Roughness.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_NormalGL.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_Color.jpg" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 9 )
roughness_texture = ExtResource( 7 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 8 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.7, 0.3, 0.1 )

[node name="North Chamber" type="Spatial"]
script = ExtResource( 2 )

[node name="CSGTorus" type="CSGTorus" parent="."]
transform = Transform( 3, 0, 0, 0, 100, 0, 0, 0, 3, 0, 1.5, 0 )
use_collision = true
inner_radius = 2.9
sides = 25
ring_sides = 10
material = SubResource( 3 )

[node name="CSGSphere" type="CSGSphere" parent="CSGTorus"]
transform = Transform( 0.5, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 3, -0.07, 0 )
operation = 2
radius = 1.07808
radial_segments = 20
material = SubResource( 3 )

[node name="NC T Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -3.31421e-08, 0, 0.758203, 0, 0.0379102, 0, -0.758203, 0, -3.31421e-08, -2.85, 0.01, 0 )
texture = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/NC T Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.914
omni_range = 2.0
omni_attenuation = 0.164941

[node name="NC T Sprite" type="Area" parent="CSGTorus/NC T Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/NC T Sprite/NC T Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="NC BL Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -0.519615, 0, -0.5, 0, 0.038, 0, 0.3, 0, -0.866025, 1.45, 0.01, 2.45 )
texture = ExtResource( 4 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/NC BL Sprite"]
transform = Transform( -0.523487, 0, 0.18602, 0, -0.263158, 0, -0.111612, 0, -0.314092, 0, 0.1, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="NC BL Sprite" type="Area" parent="CSGTorus/NC BL Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/NC BL Sprite/NC BL Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="NC BR Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( 0.519615, 0, -0.5, 0, 0.038, 0, 0.3, 0, 0.866025, 1.45, 0.01, -2.45 )
texture = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/NC BR Sprite"]
transform = Transform( -0.523487, 0, 0.18602, 0, -0.263158, 0, -0.111612, 0, -0.314092, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="NC BR Sprite" type="Area" parent="CSGTorus/NC BR Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/NC BR Sprite/NC BR Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="NC R Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( 0.587069, 0, 0.544639, 0, 0.038, 0, -0.381247, 0, 0.838671, -1.45, 0.01, -2.45 )
texture = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/NC R Sprite"]
transform = Transform( -0.455529, 0, 0.138747, 0, -0.263158, 0, -0.0971229, 0, -0.31887, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="NC R Sprite" type="Area" parent="CSGTorus/NC R Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/NC R Sprite/NC R Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="NC L Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -0.606218, 0, 0.5, 0, 0.038, 0, -0.35, 0, -0.866026, -1.45, 0.01, 2.45 )
texture = ExtResource( 6 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/NC L Sprite"]
transform = Transform( -0.455529, 0, 0.138747, 0, -0.263158, 0, -0.0971229, 0, -0.31887, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="NC L Sprite" type="Area" parent="CSGTorus/NC L Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/NC L Sprite/NC L Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CSGTorus/NC T Sprite/NC T Sprite" to="." method="_on_NC_T_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/NC BL Sprite/NC BL Sprite" to="." method="_on_NC_BL_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/NC BR Sprite/NC BR Sprite" to="." method="_on_NC_BR_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/NC R Sprite/NC R Sprite" to="." method="_on_NC_R_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/NC L Sprite/NC L Sprite" to="." method="_on_NC_L_Sprite_body_entered"]
